--- a/index.html
+++ b/index.html
@@ -80,27 +80,57 @@
 			
 			<p><img src="images/slide13.JPG"></p>
 			
-			<p><img src="images/slide14.JPG"></p>
+			<p><img src="images/slide14.JPG"></p>			
 			
 			<p><img src="images/slide15.JPG"></p>
 			
 			<p><img src="images/slide16.JPG"></p>
 			
+			<div class="embed-responsive embed-responsive-16by9">
+				<iframe width="560" height="315" src="https://www.youtube.com/embed/MynuaLF_Gn0?si=ZRTg5W8SM72At4wi" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+			</div>
+			
 			<p><img src="images/slide17.JPG"></p>
+			
+			<div class="embed-responsive embed-responsive-16by9">
+				<iframe width="560" height="315" src="https://www.youtube.com/embed/pYImIFFyroM?si=Agnm0A4TS4UScNNZ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+			</div>
 			
 			<p><img src="images/slide18.JPG"></p>
 			
+			<div class="embed-responsive embed-responsive-16by9">
+				<iframe width="560" height="315" src="https://www.youtube.com/embed/rTseSNhX8ns?si=1kBtwkYPJaNpj6zq" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+			</div>
+			
 			<p><img src="images/slide19.JPG"></p>
+			
+			<div class="embed-responsive embed-responsive-16by9">
+				<iframe width="560" height="315" src="https://www.youtube.com/embed/aiAX2iQfp3o?si=SsiYRiLNPGdC2VO8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+			</div>
 			
 			<p><img src="images/slide20.JPG"></p>
 			
+			<div class="embed-responsive embed-responsive-16by9">
+				<iframe width="560" height="315" src="https://www.youtube.com/embed/V1VdP7gfo_E?si=-M9KUdQq6OUkJZQs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+			</div>
+			
 			<p><img src="images/slide21.JPG"></p>
+			
+			<div class="embed-responsive embed-responsive-16by9">
+				<iframe width="560" height="315" src="https://www.youtube.com/embed/MrxDuXw8iCo?si=YqJ1iMugR6W97WA_" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+			</div>
 			
 			<p><img src="images/slide22.JPG"></p>
 			
-			<p><img src="images/slide23.JPG"></p>
+			<div class="embed-responsive embed-responsive-16by9">
+				<iframe width="560" height="315" src="https://www.youtube.com/embed/ldY8qGG8uD4?si=ojn6S180AEali3Kq" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+			</div>
 			
 			<p><img src="images/slide24.JPG"></p>
+			
+			<div class="embed-responsive embed-responsive-16by9">
+				<iframe width="560" height="315" src="https://www.youtube.com/embed/940rO7S5FzY?si=DxhvTSwqYzrhQNDe" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+			</div>
 			
 			<p><img src="images/slide25.JPG"></p>
 			
